# roboy_controller

./: CMakeLists.txt  CupTable_plugin.xml  HitDetection_plugin.xml  JointAngleController_plugin.xml  MuscController_plugin.xml  package.xml
config/: TestRobot.yaml  dance_controller.yaml  left_hand_model.yaml  msj_platform.yaml  onefinger_reduced.yaml  roboy_controller.yaml  roboy_head.yaml  roboy_head_n1.yaml  roboy_infineon_game.yaml  roboy_left_arm.yaml  roboy_stronger_hand.yaml  roboy_xylophone.yaml  roboy_xylophone_left_arm.yaml  roboy_xylophone_left_arm_mod1.yaml
include/roboy_controller/: DanceController.hpp  MuscleActivityController.hpp  roboy.hpp
launch/: roboy.launch
scripts/: head_home.py  head_look_at_sound_source.py  head_movement_look_around.py  head_movement_test.py  infineon_game.py  look_left.sh  look_right.sh  lookatcups.py  move.sh  movement_test.py  msj_platform.py  random_movement.py  track_aruco_69.py  tracker_publisher.py  xylophone_hitter.py
src/: CupTablePlugin.cpp  DanceController.cpp  ForceController.cpp  HitDetectionPlugin.cpp  JointAngleController.cpp  MuscController.cpp  MuscleActivityController.cpp  PositionController.cpp  VelocityController.cpp  roboy.cpp
