<?xml version="1.0"?>
<package format="2">
    <name>roboy_controller</name>
    <version>0.0.0</version>
    <description>controllers</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>controller_interface</depend>
    <depend>roboy_communication_middleware</depend>
    <depend>common_utilities</depend>
    <depend>roboy_simulation</depend>

    <export>
        <controller_interface plugin="${prefix}/PositionController_plugin.xml"/>
        <controller_interface plugin="${prefix}/VelocityController_plugin.xml"/>
        <controller_interface plugin="${prefix}/ForceController_plugin.xml"/>
        <controller_interface plugin="${prefix}/MuscleActivityController_plugin.xml"/>
        <controller_interface plugin="${prefix}/JointAngleController_plugin.xml"/>
        <controller_interface plugin="${prefix}/MuscController_plugin.xml"/>
        <controller_interface plugin="${prefix}/HitDetection_plugin.xml"/>
    </export>
</package>
